--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ server {
         proxy_pass $upstream;
     }
 
-    location /static/ {
+    location /staticfiles/ {
         set $upstream http://backend:8000;
         proxy_set_header Host               $http_host;
         proxy_set_header X-Real-IP          $remote_addr;
