--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 server {
 
-    listen 80;
+    listen 443 ssl;
+    server_name mv.starnavi.co;
     resolver 127.0.0.11 valid=30s;
 
     location / {
@@ -35,4 +36,24 @@ server {
         proxy_pass $upstream;
     }
 
+}
+
+server {
+    listen 80;
+    server_name mv.starnavi.co;
+    resolver 127.0.0.11 valid=30s;
+
+    ssl_certificate /etc/letsencrypt/live/mv.starnavi.co/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/mv.starnavi.co/privkey.pem;
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 }
