--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,17 @@ services:
     build: .
     ports:
       - 80:80
-    networks:
-      - medverse_network
-
+      - 443:443
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 networks:
-  medverse_network:
-    external:
-      name: medverse_network
+  medverse_networ
