--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name mv.starnavi.co;
+    resolver 127.0.0.11 valid=30s;
 
     ssl_certificate /etc/letsencrypt/live/mv.starnavi.co/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/mv.starnavi.co/privkey.pem;
@@ -21,6 +22,7 @@ server {
 
     listen 443 ssl;
     server_name mv.starnavi.co;
+    resolver 127.0.0.11 valid=30s;
 
     location / {
         set $upstream http://frontend:3000;
