--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name mv.starnavi.co;
+    resolver 127.0.0.11 valid=30s;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -15,7 +16,7 @@ server {
 
     listen 443 ssl;
     server_name mv.starnavi.co;
-    
+    resolver 127.0.0.11 valid=30s;
     ssl_certificate /etc/letsencrypt/live/mv.starnavi.co/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/mv.starnavi.co/privkey.pem;
 
