--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -21,10 +21,10 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/mv.starnavi.co/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    ssl_dhparam /etc/letsencrypt/ssl-dhpa rams.pem;
 
     location / {
-        set $upstream http://frontend:3000;
+        set $upstream http://frontend:5000;
         proxy_set_header Host               $http_host;
         proxy_set_header X-Real-IP          $remote_addr;
         proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
