--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -21,7 +21,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/mv.starnavi.co/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhpa rams.pem;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
         set $upstream http://frontend:5000;
