--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -56,3 +56,62 @@ server {
     }
 
 }
+
+server {
+    listen 80;
+    server_name mdrisks.site www.mdrisks.site;
+    resolver 127.0.0.11 valid=30s;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+
+    listen 443 ssl;
+    server_name mdrisks.site www.mdrisks.site;
+    resolver 127.0.0.11 valid=30s;
+    ssl_certificate /etc/letsencrypt/live/www.mdrisks.site/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.mdrisks.site/privkey.pem;
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        set $upstream http://frontend:5001;
+        proxy_set_header Host               $http_host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_pass $upstream;
+    }
+
+    location /api/v1/ {
+        set $upstream http://backend:8001;
+        proxy_set_header Host               $http_host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_pass $upstream;
+    }
+
+    location /admin/ {
+        set $upstream http://backend:8001;
+        proxy_set_header Host               $http_host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_pass $upstream;
+    }
+
+    location /staticfiles/ {
+        set $upstream http://backend:8001;
+        proxy_set_header Host               $http_host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_pass $upstream;
+    }
+
+}
