move on with preview

--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -59,7 +59,7 @@ server {
 
 server {
     listen 80;
-    server_name mdrisks.site www.mdrisks.site;
+    server_name mdrisks.site;
     resolver 127.0.0.11 valid=30s;
 
     location /.well-known/acme-challenge/ {
@@ -74,10 +74,10 @@ server {
 server {
 
     listen 443 ssl;
-    server_name mdrisks.site www.mdrisks.site;
+    server_name mdrisks.site;
     resolver 127.0.0.11 valid=30s;
-    ssl_certificate /etc/letsencrypt/live/www.mdrisks.site/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.mdrisks.site/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/mdrisks.site/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/mdrisks.site/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
